# synthetic-restaurant-data

./: README.md  main.py  pyproject.toml
.github/workflows/: claude.yml  daily_generate.yml  deploy_pages.yml
data/output/: change_log.csv  customer.csv  dashboard.html  generation_run.csv  menu_item.csv  menu_price_history.csv  order.csv  receipt.csv  set_discount.csv  tax_rate_history.csv  visit.csv
docs/: 00_進め方.md  01_要件.md  02_CSVスキーマ.md  04_設定デフォルト.md  05_受け入れ条件.md  06_運用ガイド.md  07_仮説検証_データ可視化ギャップ.md  Agents.md
scripts/: build_dashboard.py
scripts/workflows/: daily_generate.yml
src/dashboard/: app.py
src/fami_synth/: cli.py  generator_day.py  ids.py  io_csv.py  state.py
src/fami_synth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_csv_headers.py  test_dashboard_app.py  test_determinism.py  test_incremental.py  test_rules.py
