[project]
name = "fami-synth"
version = "0.1.0"
description = "Family restaurant synthetic data generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
fami-synth = "fami_synth.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fami_synth"]

[tool.pytest.ini_options]
pythonpath = ["src"]
